--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,6 @@ services:
       - "500:500"
       - "4500:4500"
       # SoftEther VPN
-      - "12973:12973"
+      - "${PORT}:${PORT}"
     volumes:
       - ./vpn_server.config:/usr/local/vpnserver/vpn_server.config
